Resolves #15 - Fixed height on about intro due to 100% allowing scroll, causing particles not to align properly

--- a/client/src/components/Cursor/style.scss
+++ b/client/src/components/Cursor/style.scss
@@ -5,7 +5,7 @@
     left: 0;
     transform: translate(-50%, -50%);
     border-radius: 50%;
-    z-index: 9999;
+    z-index: 99999;
     pointer-events: none;
   }
   .cursor-inner{
@@ -53,6 +53,13 @@
     &.cursor-menu-toggle{
       border-radius: 3px;
       opacity: 0;
+    }
+  }
+
+
+  @media only screen and (max-width: 1020px){
+    [class^="cursor"]{
+      display: none;
     }
   }
   
