--- a/client/src/pages/Home/Components/ParticleText/style.scss
+++ b/client/src/pages/Home/Components/ParticleText/style.scss
@@ -1,7 +1,11 @@
 .about-container {
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    max-height: 100vh;
+    position: relative;
+    display: block;
 
   & .particle-text {
       text-align: center;
@@ -88,8 +92,9 @@
           position: absolute;
           top: 0;
           left: 0;
-          width: 100vw;
-          height: 100vh;
+          bottom: 0;
+          width: 100%;
+          height: 100%;
           z-index: 10;
           pointer-events: none;
       }
@@ -110,4 +115,11 @@
         50% { background-color: transparent; }
           99% { background-color: transparent; }
             100% { background-color: #ccc; }
+  }
+
+
+  @media only screen and (max-width: 767px){
+    .about-container {
+      height: 90vh;
+    }
   }
